fix: 适配 uni-app x 节点操作接口

--- a/packages/runtime-x/package.json
+++ b/packages/runtime-x/package.json
@@ -4,6 +4,6 @@
   "version": "3.2.30",
   "sideEffects": false,
   "dependencies": {
-    "@dcloudio/uni-shared": "/Users/fxy/Projects/GitHub/uni-app/uni-app-next/packages/uni-shared"
+    "@dcloudio/uni-shared": "3.0.0-alpha-3090920231127001"
   }
 }
