--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   },
   "devDependencies": {
     "@babel/types": "^7.12.0",
+    "@dcloudio/uni-app-x": "^0.6.0",
     "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
     "@microsoft/api-extractor": "~7.20.0",
     "@rollup/plugin-commonjs": "^23.0.2",
