--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
   },
   "include": [
     "packages/global.d.ts",
+    "packages/native.d.ts",
     "packages/*/src",
     "packages/runtime-dom/types/jsx.d.ts",
     "packages/*/__tests__",
