--- a/packages/compiler-dom/package.json
+++ b/packages/compiler-dom/package.json
@@ -37,7 +37,7 @@
   },
   "homepage": "https://github.com/vuejs/core/tree/main/packages/compiler-dom#readme",
   "dependencies": {
-    "@dcloudio/uni-shared": "/Users/fxy/Projects/GitHub/uni-app/uni-app-next/packages/uni-shared",
+    "@dcloudio/uni-shared": "3.0.0-alpha-4000120240201002",
     "@vue/shared": "3.2.47",
     "@vue/compiler-core": "3.2.47"
   }
