--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@types/hash-sum": "^1.0.2",
     "@types/minimist": "^1.2.5",
     "@types/node": "^20.11.28",
+    "@types/promise-polyfill": "^6.0.6",
     "@types/semver": "^7.5.8",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
@@ -98,6 +99,7 @@
     "picocolors": "^1.0.0",
     "prettier": "^3.2.5",
     "pretty-bytes": "^6.1.1",
+    "promise-polyfill": "^8.3.0",
     "pug": "^3.0.2",
     "puppeteer": "~22.4.1",
     "rimraf": "^5.0.5",
