--- a/packages/runtime-core/package.json
+++ b/packages/runtime-core/package.json
@@ -48,6 +48,7 @@
   "dependencies": {
     "@dcloudio/uni-shared": "3.0.0-alpha-4010320240417001",
     "@vue/shared": "workspace:*",
-    "@vue/reactivity": "workspace:*"
+    "@vue/reactivity": "workspace:*",
+    "promise-polyfill": "^8.3.0"
   }
 }
